# 3d-struct

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/hello_world/: CMakeLists.txt  main.cpp
apps/open3d_example/: CMakeLists.txt  main.cpp
apps/simple_struct/: CMakeLists.txt  main.cpp
apps/tesselate_example/: CMakeLists.txt  main.cpp
docs/: quick_start.md
src/core/: CMakeLists.txt
src/core/include/: math.h  util.h
src/core/src/: util.cpp
src/geometry/: CMakeLists.txt
src/geometry/include/: edge.h  graph.h  line_segement.h  math_util.h  point.h  structify.h  tesselate.h
src/geometry/src/: line_segment.cpp  math_util.cpp  structify.cpp  tesselate.cpp
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt  util_test.cpp
tests/geometry/: CMakeLists.txt  graph_test.cpp  point_test.cpp
